# acc_genomics

./: README.md
bwa-sw/intel/aocl/: Makefile  gen_bit_prof_2x2x10.sh  gen_bit_prof_2x2x20.sh  gen_bit_prof_2x2x30.sh  run_sw_emu_2x2x10.sh  run_sw_emu_2x2x20.sh  run_sw_emu_2x2x30.sh
bwa-sw/intel/aocl/src/: main_cl.cpp  smithwaterman.cl
bwa-sw/intel/aocl/testdata/: get-data.sh
bwa-sw/sdaccel/: .gitignore  BWAOCLEnv.h  Makefile  README.md  main_cl.cpp  run_hls.tcl  run_sda.tcl  smithwaterman.cpp
common/: common.mk  mcc_common.mk
common/include/acc_lib/: CLEnv.h  Timer.h  XCLEnv.h
htc-sw/: Makefile  README.md
htc-sw/host/: FalconSW_AVX.cpp  FalconSW_FPGA.cpp  common.h  smithWatermanHost.cpp  smithWatermanHost.h  sw_host.cpp
htc-sw/intel_avx/: PairWiseSW.h  avx2_impl.cc  avx2_impl.h  smithwaterman_common.h
htc-sw/xlnx/: kernel_smithWatermanMerlin.cpp  smithWatermanMerlin.cpp
pairhmm/: CMakeLists.txt  LICENSE.txt  s10.conf  xlnx.conf
pairhmm/client/: CMakeLists.txt  PairHMMClient.cpp  PairHMMClient.h  PairHMMWorker.cpp  PairHMMWorker.h
pairhmm/cmake/: FindBlaze.cmake  FindGoogle.cmake  FindIntelGKL.cmake  FindIntelOCL.cmake  FindKSight.cmake  FindXilinxOCL.cmake
pairhmm/host/: CMakeLists.txt  PairHMMFpga.cpp  PairHMMFpga.h  main.cpp
pairhmm/interface/: CMakeLists.txt  PairHMMFpgaInterface.cpp  PairHMMFpgaInterface.h  PairHMMHostInterface.cpp  PairHMMHostInterface.h
pairhmm/task/: CMakeLists.txt
pairhmm/task/intel/: CMakeLists.txt  PairHMMBuffer.h  PairHMMTask.cpp  PairHMMTask.h
pairhmm/task/xlnx/: CMakeLists.txt  PairHMMTask.cpp  PairHMMTask.h
pairhmm/xlnx/: .gitignore  Makefile  README.md  pairhmm_test.cpp
pairhmm/xlnx/common/: common.h  m2m.h  ph2pr.h  ph2pr_div3.h  ph2pr_sub1.h  yrow1.h
pairhmm/xlnx/device/: pairhmm.cpp  pairhmm.h
pairhmm/xlnx/host/: FalconPairHMM.cpp  FalconPairHMM.h  avx-pairhmm.h  avx-types.h  avx_impl.cpp  avx_impl.h  baseline_impl.cpp  baseline_impl.h  host_type.h
pairhmm/xlnx/tcl/: cosim.tcl  pblock_2die.tcl  pblock_3die_aws.tcl  pblock_3die_hwc.tcl  syslink.tcl
smem/: Makefile  README.md  compile.sh  main.cpp
smem/common/: common.h
smem/device/: smem.cpp  smem.h
smem/host/: baseline.cpp  baseline.h  host_types.h  ocl.cpp  ocl.h  xcl.h
smem/tcl/: mem_collect_intv_core0_hw.tcl  mem_collect_intv_core1_hw.tcl  mem_collect_intv_core2_hw.tcl  mem_collect_intv_core3_hw.tcl  syslink.tcl
